tests/lean/331.lean.expected.out
331.lean:6:9-6:10: error: Failed to infer type of binder 'x'
when the resulting type of a declaration is explicitly provided, all holes (e.g., `_`) in the header are resolved before the declaration body is processed
331.lean:7:9-7:10: error: Failed to infer type of binder 'x'
when the resulting type of a declaration is explicitly provided, all holes (e.g., `_`) in the header are resolved before the declaration body is processed
